tests/NormalTests/paczka1/small_fuzzy/55958755.err
Error in line 3: B88RK3rk S97 66,9
Error in line 5: gdVGPte4uGL A302 51,6
Error in line 8: SNozwigyHAQ S'7 5,5
Error in line 6: gdVGPte4uGL A612 37,5
Error in line 4: B88RK3rk A636 2,8
Error in line 13: ffkOdb A636 89,2
